--- a/css/contact.css
+++ b/css/contact.css
@@ -2,18 +2,22 @@
   margin:0 auto;
 }
 
-.contact{
-  /*   border-collapse: separate;     */
+.block_input{
+  margin-right: 0px;
 }
 
-.contact th {
+.block_input th {
+  width: 180px;  
   height: 7rem;
-  width: 150px;
+
   text-align: right;
 }
 
-.contact td {
-  padding-left: 1rem;  
+.block_input td {
+  width: 480px;    
+  height: 7rem;
+
+  padding-left: 10px;
 }
 
 #contact_name{
@@ -29,23 +33,26 @@
   height: 7rem;
 }
 
-input#contact_submit{
+.block_submit{
+  width: 660px;
+  margin-top: 10px;
+}
+
+input#btn_submit{
+  width: 50px;
+  margin: 0px 290px;
+  /*   margin: 0px auto;   */
+  
   color: #ffffff;
   background-color: #87CEEB;
   position: absolute;
 }
 
 
-input#contact_submit:hover{
+input#btn_submit:hover{
   color: #ffffff;
   background-color: #87CEEB;  
   opacity: 0.5;  
-}
-
-
-.contact p{
-  position:absolute;
-  margin:0 auto;  
 }
 
 
